# assay

./: .env.example  .gitignore  ARCHITECTURE.md  BUSINESS.md  Dockerfile  GOAL.md  README.md  ROADMAP.md  STATUS.md  action.yml  continuous_evaluation.py  monitor_eval.py  monitor_eval_progress.sh  pyproject.toml  railway.toml  run_batch_evaluation.py  run_continuous_eval.sh  run_continuous_evaluation.py  run_eval.py  run_eval_with_backoff.py  run_evaluation_fleet.py  smart_eval_loop.py  start_evaluation.sh
.claude/: CLAUDE.md  WORKBOARD.md
docs/: community-evaluations-design.md  landing-page-copy.md  marketing.md  outreach-templates.md  prospecting.md  utm-strategy.md
evaluations/: 100ms-api.json  12306-mcp.json  15five-api.json  1password-api.json  1password-mcp.json  1password-secrets-api.json  2c2p-api.json  2checkout-api.json  360learning-api.json  6sense-api.json  7shifts-api.json  8x8-api.json  a-ariff-canvas-instant-mcp.json  a2a-mcp-server.json  a2v.json  aap-enterprise-mcp-server.json  aave-api.json  abap-mcp-server.json  abas-api.json  abbyy-api.json  abbyy-vantage-api.json  abc-fitness-api.json  abcoder.json  ably-api.json  ably-realtime-api.json  abnormal-security-api.json  absinthe-elixir-api.json  absolute-security-api.json  absorb-api.json  absorb-lms-api.json  abstract-api.json  abstractapi.json  abuseipdb-api.json  accela-api.json  accelbyte-api.json  acceldata-api.json  accelerate-api.json  accelerate-hf-api.json  accelerate-huggingface-api.json  accesso-api.json  (+8163 more)
logs/: session-2026-03-03_0332-output.md  session-2026-03-05_0357-output.md  (+1 more)
(+148 files in other folders)
